css/style.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  overflow-x: hidden;
  background: #eee;
  color: #333;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 400;
  transition: 500ms;
}

#front-social {
  margin-top: -30px;
}

.social-icon-fp {
  color: #333;
  text-decoration: none;
  margin: 0 10px;
  transition: color 0.2s ease;
  font-size: 2.0rem;
}

.social-icon-fp:hover {
  color: #dd0c1f;
  transition: color 0.2s ease;
}


.phero {
  /* background-image: url("/images/new-bg.jpg"); */
  min-height: 100%;
  overflow-y: hidden;
}

.img-profile {
  object-fit: cover;
  display: block;
  border-radius: 50%;
  height: 15rem;
  width: 15rem;
  padding: 0;
  margin: 0 auto;
  box-shadow: 0px 2px 15px rgb(109, 109, 109);
}

.inner-text {
  position: relative;
  width: 80vw;
  margin: auto;
  top: 140px;
  font-weight: 600;
  text-align: center;
  font-size: 4rem;
}

.intro-text {
  margin: 20px auto;
  font-size: 3rem;
  line-height: 50px;
}

span {
  padding: 0;
}

.sub-text {
  margin: 10px auto;
  font-size: 1rem;
  text-align: center;
  font-family: 'Courier New', Courier, monospace;
  width: inherit;
  line-height: 1rem;
}

/* ADDED SOCIAL LINKS */

div.links-wrapper {
  display: inline;
  margin: -20 auto;
  text-align: center;
  overflow: hidden;
  line-height: 0;
}

ul.social-links {
  list-style: none;
  margin: 0 auto;
  padding: 0;
  height: 20px;
}

ul.social-links li {
  height: 20px;
  display: inline-block;
}

ul.social-links li a {
  color: #fff;
  padding: 0;
  display: block;
  margin: 0;
  text-decoration: none;
  height: 20px;
  font-size: 12px;
}

ul.social-links li a img {
  height: 20px;
}

ul.social-links:hover li {
  opacity: 0.5;
  height: inherit;
  transition: 200ms;
}

ul.social-links li:hover {
  opacity: 1;
  transition: 200ms;
}

/* HEADER */
#menu-icon {
  float: right;
  display: none;
  vertical-align: middle;
  padding: 10px;
}

#header {
  margin: 0 auto;
  width: 100%;
}

nav {
  padding: 20px 0;
  z-index: 999;
  width: 100%;
  display: table;
  position: fixed;
  background: rgba(238, 238, 238, 0.95);
  margin: 0 auto !important;
}

#nav-items {
  width: 80%;
  margin: 0 auto;
}

.btn-ham {
  color: #333;
}

#topnav {
  float: right;
}

#name-item {
  color: #dd0c1f;
  text-align: left;
  font-weight: 750;
  letter-spacing: 1px;
  margin: 0;
  cursor: pointer;
  transition: color 0.2s ease;
}

#name-item:hover {
  color: #333;
  transition: color 0.2s ease;
}

.nav-item {
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 650;
  font-size: 0.8rem;
  color: #333;
  transition: color 0.2s ease;
}

.port {
  margin: 0 40px;
}

.nav-item:hover {
  color: #dd0c1f;
  transition: color 0.2s ease;
}

.mystyle:first-child li a {
  text-decoration: none;
  color: #f00;
}

@media only screen and (max-width: 786px) {
  #menu-icon {
    display: block;
    cursor: pointer;
  }

  #name-item {
    display: block;
    text-align: center;
    font-size: 1.1rem;
    margin-top: -15px;
    margin-bottom: 5px;
  }

  #topnav {
    display: block;
    margin: 0 auto;
    margin-left: 0;
  }

  nav {
    height: 32px;
  }
}

/* END HEADER */

.button-container {
  position: absolute;
  top: 95%;
  left: 0;
  right: 0;
  margin: auto;
  text-align: center;
}

.btn-icon {
  height: 32px;
  opacity: 0.5;
  transition: 300ms;
}

.btn-icon:hover {
  opacity: 1;
  transition: 300ms;
}

.lcontent {
  background: #333;
  display: flex;
}

.rcontent {
  background: #444;
  display: flex;
}

.ptext {
  display: flex;
  flex: 0 1 40vw;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding-right: 1rem;
  padding-left: 1rem;
  color: #eee;
}

.pimg {
  display: flex;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  height: 50vh;
  flex: 0 1 60vw;
  margin: 0;
}

.pimg.ece {
  background: url("/images/heromain.jpg");
}

.pimg.code {
  background: url("/images/code.jpg");
}

.section-text {
  top: 50%;
  bottom: 0;
  width: 80%;
}

@media only screen and (max-width: 786px) {

  .lcontent,
  .rcontent {
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
  }

  .lcontent.ece {
    background: url("/images/heromain.jpg");
  }

  .rcontent.code {
    background: url("/images/code.jpg");
  }

  .pimg {
    display: none;
  }

  .ptext {
    display: block;
    margin: 120px auto;
  }

  .section-text {
    margin: auto;
  }
}

/* APPS LIST */
/* 
.mdl-design {
  background: #0378e6;
} 

.mdl-privacy {
  background: rgb(19, 12, 8);
}

.mdl-contact {
  background: #2c14af;
}

.mdl-about {
  background: #e60321;
} 
*/

.content {
  margin: auto;
  padding: 20px;
  overflow-y: hidden;
  overflow-x: hidden;
  font-size: 20px;
  line-height: 30px;
  text-align: justify;
  line-height: 1em;
}

.inner-content {
  width: 60%;
  margin: auto;
}

@media only screen and (max-width: 786px) {
  .inner-content {
    width: 98%;
  }
}

.content h3 {
  text-align: center;
  font-size: 2rem;
}

.content h5 {
  text-align: center;
  font-weight: 400;
}

/*  APPS  */
.appgrid {
  margin: auto;
  display: flex;
  max-width: 75vw;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

@media only screen and (max-width: 786px) {
  .appgrid {
    max-width: 90vw;
  }
}

.item-wrapper {
  cursor: pointer;
  text-align: center;
  overflow: hidden;
  margin: 10px 5px;
  width: 144px;
  height: 200px !important;
  border: solid 1px #ddd;
}

.item-wrapper h5 {
  padding: 0 20px;
  margin: -10px 0px 40px 0px;
  font-weight: 600;
  text-align: center;
}

.item-wrapper img {
  width: 64px;
  height: 64px;
  transition: 500ms;
  padding: 40px;
  margin: 0 auto;
}

.item-wrapper img::before {
  width: 16px;
  content: " ";
  position: absolute;
  background: red;
  left: -16px;
  top: -6px;
  height: 20px;
}
/* ... */

